--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,42 @@
   <title>HTML Portfolio</title>
 </head>
 <body>
-
+  <div class="header">
+    <h1>Sören Schulz</h1>
+    <h2>Software Developer</h2>
+  </div>
+  <div class="tagline">
+    <h3>About Me</h3>
+    <p>
+      I am learning things to do things.
+    </p>
+  </div>
+  <div class="skills">
+    <h3>this is some shit i can do</h3>
+    <p>
+      ...
+    </p>
+    <ul>
+      <li>
+        HTML
+      </li>
+      <li>
+        JavaScript
+      </li>
+      <li>
+        Angular
+      </li>
+      <li>
+        Java
+      </li>
+    </ul>
+  </div>
+  <div class="contact">
+    <h3>contact me</h3>
+    <p>
+      you know the drill<a href="www.youtube.com">www.youtube.com</a>
+    </p>
+  </div>
   Welcome to the HTML Portfolio Project
 
 </body>
